# sgt_telecom

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: app_registry.rs  bootstrap_application.rs  main.rs
compute/: Cargo.toml
config/: Cargo.toml  postgres.toml
config/src/: lib.rs  postgres.rs
config/src/postgres/: postgres_config.rs
modules/: Cargo.toml  modules_registry.rs
modules/email/: Cargo.toml
modules/email/src/: api.rs  email_registry.rs  lib.rs  repository.rs  state.rs
modules/email/src/api/: email_api_inbound.rs  email_response.rs
modules/email/src/handler/: error.rs  handlers.rs
modules/email/src/repository/: email_repository.rs
modules/email/src/service/: email_service.rs
modules/sms/: Cargo.toml
modules/whatsapp/: Cargo.toml
shared/: Cargo.toml
shared/src/: db.rs  lib.rs  registry.rs
