[package]
name = "app"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true

[dependencies]
email  = { path = "../modules/email" }
config = { path = "../config" }

axum               = "0.8"
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing            = "0.1"
tracing-subscriber = "0.3"
anyhow             = "1"
