[package]
name = "email"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true

[dependencies]
domain = { path = "../../domain" }
config = { path = "../../config" }
shared = { path = "../../shared" }

axum        = "0.8"
serde       = { version = "1", features = ["derive"] }
async-trait = "0.1"
tracing     = "0.1"
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "chrono",
] }
chrono = { version = "0.4", features = ["serde"] }